@@ -167,7 +167,20 @@ let trim s =
   else
     empty
 
-let escaped s =
+let unsafe_escape s =
+  (* We perform two passes on the input sequence, one to compute the
+     result size and one to write the result.
+
+     #11508, #11509: This logic would be incorrect in presence of
+     concurrent modification to the input, making the use of
+     [unsafe_set] below memory-unsafe.
+
+     Precondition: This function may be safely called on:
+     - an immutable byte sequence
+     - a uniquely-owned byte sequence (the function takes ownership)
+
+     In either case we return a uniquely-owned byte sequence.
+  *)
   let n = ref 0 in
   for i = 0 to length s - 1 do
     n := !n +
@@ -176,7 +189,8 @@ let escaped s =
        | ' ' .. '~' -> 1
        | _ -> 4)
   done;
-  if !n = length s then copy s else begin
+  if !n = length s then s
+  else begin
     let s' = create !n in
     n := 0;
     for i = 0 to length s - 1 do
@@ -206,6 +220,12 @@ let escaped s =
     done;
     s'
   end
+
+let escaped b =
+  let b = copy b in
+  (* We copy our input to obtain a uniquely-owned byte sequence [b]
+     to satisfy [unsafe_escape]'s precondition *)
+  unsafe_escape b
 
 let map f s =
   let l = length s in
